Fixed a styling issue with the content page where the content when viewed by mobile overflowed horizontally

--- a/frontend/src/Pages/ContentPage.module.scss
+++ b/frontend/src/Pages/ContentPage.module.scss
@@ -17,11 +17,12 @@
     p {
       font-size: 1.3rem;
       line-height: 2.3rem;
+      padding: 0 3rem;
     }
   }
 
   .body {
-    width: 90%;
+    margin: 0;
   }
 
 }
